rename third party service tests to follow the same naming convention as other tests